--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,10 @@
     <color name="swiperefresh_color4">#ffaa66cc</color>
     <color name="list_divider_color">#DADADA</color>
 
+
+    <color name="blog_title_text_color_light">#111111</color>
+    <color name="count_text_color_light">#9d9d9d</color>
     <color name="main_green">#24cf5f</color>
+
+    <color name="ijk_transparent_dark">#77000000</color>
 </resources>
